<resources>
    <string name="app_name">SMKC Challenge 1</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur (tahun)</string>
    <string name="email">Email</string>
    <string name="telp">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="edit">Edit Nama</string>
    <string name="dial">Dial</string>
    <string name="about">About</string>
    <string name="biodata">Biodata</string>
    <string name="works">Works</string>

    <string-array name="jk">
        <item>Pilih jenis kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>
