<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/edit"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:textColorHint="@color/hint"
            android:hint="@string/nama"
            android:theme="@style/EditText"
            android:inputType="text"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_simpan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/gradient"
            android:text="@string/simpan"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>