<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/abelherl"
            android:scaleType="centerInside"/>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="-80dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:elevation="7dp"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/hint"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="I’m a 17 years old guy who loves guitar, drawing and learning languages. Programming languages and real languages. I've been exploring inside the graphic design world since I was 11. And now, I'm ready to implement it in another world. Programming."
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/nama"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="Hafiz Furqon Presanabel"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/umur"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_umur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="17"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/jk"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_jk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="Laki-laki"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/telp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="089679844250"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/email"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="abangabel02gmail.com"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/alamat"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_alamat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/hint"
                android:layout_marginStart="15dp"
                android:text="Perum. Bukit Cemara Tujuh Blok AA/20, Malang, Indonesia"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_works"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/works"/>

    </LinearLayout>

</ScrollView>